# fluxo_autenticacao

./: .gitignore  README.md  dashboard.html  dashboard.js  index.html  pyproject.toml  register.html  resgister.js  script.js  style.css
app/: database.py  main.py
